welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:7: error: identifier expected but integer literal found.
    array(i + 1) = 1 + array[i + 1 - array[array[i]]]
                                 ^golomb:8: error: ']' expected but '}' found.
  }
  ^golomb:10: error: identifier expected but integer literal found.
  return array[num - 1]
                     ^golomb:11: error: ']' expected but '}' found.
} 
^